tests/invalid/generic_type_argument_missing_after_comma.wio
type Pair<T, U> = T;

fn Entry() -> i32 {
    let value: Pair<i32,> = 7;
    return value;
}
